[package]
name = "rpfixer"
description = "A tool to fix Minecraft: Java Edition resource pack image protection"
license = "MIT"
authors = ["endernon"]
repository = "https://git.frfrnocap.men/endernon/rpfixer"
readme = "readme.md"
version = "0.4.2"
edition = "2021"

[dependencies]
clap = { version = "4.5.22", features = ["derive"] }
glob = "0.3.1"
adler = "1.0.2"
crc32fast = "1.4.2"
miniz_oxide = "0.8.0"

[lib]
name = "rpfixer"
path = "src/lib.rs"

[[bin]]
name = "rpfixer"
path = "src/main.rs"